<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterEmailPasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarRegisterEmailPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarRegisterEmailPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIconTint="@color/white"
            app:title="@string/text_title_toolbar_email_password"
            app:titleCentered="true"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTitleRegisterEmailPassword"
        style="@style/Text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="100dp"
        android:text="@string/title_register_email_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextDescriptionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:inputType="textAutoComplete"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitleRegisterEmailPassword"
        app:layout_constraintStart_toStartOf="@+id/textViewTitleRegisterEmailPassword"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleRegisterEmailPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextDescriptionCpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editTextDescriptionName"
        app:layout_constraintStart_toStartOf="@+id/editTextDescriptionName"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescriptionName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextDescriptionAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editTextDescriptionCpf"
        app:layout_constraintStart_toStartOf="@+id/editTextDescriptionCpf"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescriptionCpf" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextDescriptionProfession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:inputType="textAutoComplete"
        app:layout_constraintEnd_toEndOf="@+id/editTextDescriptionAge"
        app:layout_constraintStart_toStartOf="@+id/editTextDescriptionAge"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescriptionAge" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextDescriptionWage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editTextDescriptionProfession"
        app:layout_constraintStart_toStartOf="@+id/editTextDescriptionProfession"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescriptionProfession" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEmailEmployee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/text_hint_register_email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editTextDescriptionWage"
        app:layout_constraintStart_toStartOf="@+id/editTextDescriptionWage"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescriptionWage"
        tools:ignore="TextFields" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPasswordEmployee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/text_hint_register_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailEmployee"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailEmployee"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailEmployee" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegisterEmailPassword"
        style="@style/Text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/background_button"
        android:text="@string/text_button_register_email_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPasswordEmployee"
        app:layout_constraintVertical_bias="0.088" />
</androidx.constraintlayout.widget.ConstraintLayout>